--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" style="--scroll-y: 0;">
 
 <head>
-    <title>Jaci Labs</title>
+    <title>Rosavena Labs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="light only">
     <meta name="description" content="Rosacea Skincare">
-    <meta property="og:site_name" content="Jaci Labs">
-    <meta property="og:title" content="Jaci Labs">
+    <meta property="og:site_name" content="Rosavena Labs">
+    <meta property="og:title" content="Rosavena Labs">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Rosacea Skincare">
     <meta property="og:image" content="https://rosavenalabs.com/assets/container01.jpg">
