--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" style="--scroll-y: 0;">
 
 <head>
+
     <title>Rosavena Labs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -2255,6 +2256,15 @@
         const closeModal = () => {
             document.getElementById('backdrop').classList.remove('open');
         }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MC4KWK6THF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-MC4KWK6THF');
     </script>
 </head>
 
